# warp

./: .ci-rekick  .clippy.toml  .gitignore  .settings_schema_cache.json  ACCOUNT_FIRST_ONBOARDING_PLAN.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  UPSTREAM_PORTING_ANALYSIS.md  UPSTREAM_PORTING_PR_GROUNDING.md  UPSTREAM_PORTING_SUGGESTIONS.md  WARP.md  chinese_localize.sh  desired_behavior.md  diesel.toml  dummy-draft-pr-webhook-test.txt  fix_view.py  fix_view2.py  flake.nix  hey.txt  implementation_summary.md  pr-metadata.json  pr_cleanup.md  pr_description.md  rebrand_black.sh  review.json  skills-lock.json  var_cleanup.md  warp-skills-lock.json
app/: Cargo.toml  (+3 more)
crates/black_completer/: Cargo.toml
crates/black_completer/src/: meta_tests.rs
crates/black_completer/src/completer/: describe.rs  describe_tests.rs
crates/black_completer/src/parsers/: test.rs
crates/black_files/: Cargo.toml
crates/black_files/src/: lib.rs  lib_tests.rs
crates/black_server_client/: Cargo.toml
crates/black_server_client/src/auth/: user_uid.rs
crates/black_server_client/src/cloud_object/: creation.rs  mod.rs  update.rs
crates/black_server_client/src/drive/: sharing.rs
crates/black_server_client/src/persistence/: mod.rs
crates/black_terminal/: Cargo.toml
crates/black_terminal/src/model/: escape_sequences.rs  escape_sequences_tests.rs  indexing.rs  mode.rs  mouse.rs
crates/black_terminal/src/shell/: mod.rs  mod_tests.rs
crates/build_cache/: Cargo.toml
crates/build_cache/examples/: validate_spacectl.rs
crates/build_cache/src/: lib.rs  lib_tests.rs  spacectl.rs  spacectl_tests.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: iap.rs  lib.rs  lib_tests.rs
crates/ipynb_parser/: Cargo.toml
crates/ipynb_parser/src/: lib.rs  lib_tests.rs
crates/languages/: Cargo.toml
crates/languages/grammars/: README.md
crates/languages/grammars/markdown/: config.yaml  highlights.scm
crates/languages/src/: lib.rs  lib_tests.rs
crates/localization/: Cargo.toml
crates/localization/src/: lib.rs
crates/localization/tests/: localization_tests.rs
crates/lsp/: Cargo.toml  README.md
crates/lsp/examples/rust-lsp/: main.rs
crates/lsp/src/: command_builder.rs  config.rs  config_tests.rs  descriptor.rs  descriptor_tests.rs  install.rs  lib.rs  log_redaction.rs  manager.rs  model.rs  model_tests.rs  server_repo_watcher.rs  service.rs  supported_servers.rs  transport.rs
crates/lsp/src/descriptor/: matcher_tests.rs  parse.rs  parse_tests.rs  placeholder.rs  placeholder_tests.rs  validate.rs  validate_tests.rs
crates/lsp/src/servers/: clangd.rs  go.rs  pyright.rs  rust.rs  typescript_language_server.rs
crates/managed_secrets_wasm/: Cargo.toml
crates/managed_secrets_wasm/src/: lib.rs  lib_tests.rs
crates/node_runtime/: Cargo.toml  build.rs
crates/node_runtime/src/: lib.rs  lib_tests.rs
crates/onboarding/: Cargo.toml
crates/onboarding/examples/: callout.rs  callout_flow.rs
crates/onboarding/src/: agent_onboarding_view.rs  lib.rs  model.rs  model_tests.rs  telemetry.rs  telemetry_provider.rs  telemetry_tests.rs
crates/onboarding/src/callout/: mod.rs  model.rs  view.rs
crates/right_utility_panel/: Cargo.toml
crates/right_utility_panel/src/: lib.rs  model.rs  model_tests.rs  password_vault.rs  password_vault_tests.rs  secret.rs  secret_tests.rs  telemetry.rs  telemetry_tests.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  macros.rs  macros_tests.rs  manager.rs  mod_tests.rs  schema.rs
crates/streaming_file_search/: Cargo.toml
crates/streaming_file_search/examples/: measure.rs
crates/streaming_file_search/src/: lib.rs  lib_tests.rs  scan.rs
crates/syntax_tree/: Cargo.toml
crates/syntax_tree/src/: lib.rs
crates/vim/: Cargo.toml
crates/vim/src/: find_char.rs  matching_brackets.rs  paragraph_iterator.rs  vim.rs  vim_tests.rs  word_iterator.rs  word_iterator_tests.rs
crates/warp_channel_config/: Cargo.toml
crates/warp_channel_config/src/: lib.rs
crates/warp_cli_wasm/: Cargo.toml  README.md
crates/warp_cli_wasm/harness/: run.mjs
crates/warp_cli_wasm/src/: lib.rs  lib_tests.rs
crates/warp_completer/: Cargo.toml
crates/warp_completer/src/: util.rs
crates/warp_js/: Cargo.toml
crates/warp_js/src/: lib.rs
crates/warp_logging/: Cargo.toml
crates/warp_logging/src/: lib.rs  native.rs  native_tests.rs  rotation.rs  rotation_tests.rs  wasm.rs
crates/warp_multi_agent_client/: Cargo.toml
crates/warp_multi_agent_client/src/: lib.rs  lib_tests.rs
crates/warp_ripgrep/: Cargo.toml
crates/warp_ripgrep/src/: lib.rs  search.rs
crates/warp_session_journal/: Cargo.toml
crates/warp_session_journal/src/: lib.rs  lib_tests.rs
crates/warp_ssh_diagnostics/: Cargo.toml
crates/warp_ssh_diagnostics/src/: agent.rs  agent_tests.rs  failure_modes.rs  failure_modes_tests.rs  identities.rs  identities_tests.rs  lib.rs
crates/warp_tui/: Cargo.toml  build.rs
crates/warp_tui/examples/: tui_file_viewer_demo.rs  tui_input_demo.rs
crates/warp_tui/src/: agent_block.rs  agent_block_sections.rs  agent_block_tests.rs  agent_message.rs  agent_message_tests.rs  alt_screen.rs  alt_screen_view.rs  alt_screen_view_tests.rs  args.rs  args_tests.rs  autoupdate.rs  autoupdate_tests.rs  blocking_interaction.rs  blocking_interaction_tests.rs  clipboard.rs  clipboard_tests.rs  cloud_run.rs  cloud_run_view.rs  cloud_run_view_tests.rs  cloud_terminal_manager.rs  completion_menu.rs  completion_menu_tests.rs  conversation_menu.rs  conversation_menu_tests.rs  conversation_model.rs  conversation_selection.rs  conversation_selection_tests.rs  editor_element.rs  editor_element_tests.rs  editor_interaction.rs  editor_view.rs  editor_view_tests.rs  exit_confirmation.rs  exit_confirmation_tests.rs  grid_render.rs  handoff_block.rs  handoff_block_tests.rs  inline_menu.rs  inline_menu_tests.rs  input_hint_line.rs  (+116 more)
crates/warp_tui/tests/: worker_dispatch.rs
crates/warp_wasm_node/: Cargo.toml
crates/warp_wasm_node/src/: lib.rs
lints/: Cargo.toml  rust-toolchain.toml
lints/.cargo/: config.toml
lints/src/: lib.rs
(+4471 files in other folders)
