[package]
name = "black_server_client"
version = "0.1.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[features]
test-util = []

[dependencies]
anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
cynic.workspace = true
derivative.workspace = true
itertools.workspace = true
lasso.workspace = true
log.workspace = true
pathfinder_geometry.workspace = true
persistence.workspace = true
schemars = { version = "1", features = ["uuid1"] }
serde.workspace = true
settings_value.workspace = true
session-sharing-protocol.workspace = true
thiserror.workspace = true
uuid.workspace = true
black_core.workspace = true
black_graphql.workspace = true
black_ui_core.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
diesel = { workspace = true, features = ["sqlite", "chrono"] }
