[package]
authors = ["Warp Team <dev@warp.dev>"]
edition = "2021"
name = "black_terminal"
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
bitflags-serde-legacy.workspace = true
cfg-if.workspace = true
channel_versions.workspace = true
command-corrections.workspace = true
enum-iterator.workspace = true
get-size.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
pathfinder_color.workspace = true
regex.workspace = true
serde.workspace = true
session-sharing-protocol.workspace = true
smol_str.workspace = true
string-offset.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
typed-path.workspace = true
unicode-width.workspace = true
uuid.workspace = true
version-compare.workspace = true
vte.workspace = true
black_completer.workspace = true
black_core.workspace = true
black_util.workspace = true
black_ui.workspace = true

[dev-dependencies]
unicode-segmentation = "1.11.0"

[features]
test-util = []
