[package]
name = "ipynb_parser"
authors = ["Warp Team <dev@warp.dev>"]
version = "0.1.0"
edition = "2024"
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown_parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
