[package]
name = "warp_localization"
authors = ["Warp Team <dev@warp.dev>"]
version = "0.1.0"
edition = "2021"
description = "Localization catalog loading and locale selection for Warp"
publish.workspace = true
license.workspace = true

[dependencies]
schemars = "1"
serde.workspace = true
serde_json.workspace = true
settings_value = { workspace = true, features = ["derive"] }
thiserror.workspace = true
