[package]
name = "lsp"
version = "0.1.0"
edition = "2021"
authors = ["Warp Team <dev@warp.dev>"]
publish.workspace = true
license.workspace = true
description = "Disabled LSP compatibility layer for Zerp"

[features]
local_fs = []

[dependencies]
anyhow = { workspace = true }
http_client = { workspace = true }
instant.workspace = true
itertools.workspace = true
lsp-types = "0.97.0"
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
strum_macros = { workspace = true }
warpui_core.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
url = "2"
