[package]
name = "node_runtime"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[features]
local_fs = []

[dependencies]
anyhow = { workspace = true }
async-fs = { workspace = true }
async-trait = { workspace = true }
cfg-if = { workspace = true }
command.workspace = true
flate2 = "1.0"
futures = { workspace = true }
log = { workspace = true }
http_client = { workspace = true }
semver = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = "0.4"
warp_core = { workspace = true }
zip = "2.1"

[build-dependencies]
anyhow.workspace = true
