[package]
name = "onboarding"
version = "0.1.0"
edition = "2021"
authors.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "onboarding"
path = "src/bin/main.rs"
required-features = ["bin"]

[features]
bin = ["black_ui/log_named_telemetry_events"]

[dependencies]
ai.workspace = true
anyhow.workspace = true
cfg-if.workspace = true
instant.workspace = true
log.workspace = true
pathfinder_color.workspace = true
pathfinder_geometry.workspace = true
rust-embed.workspace = true
serde.workspace = true
ui_components.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid.workspace = true
black_core = { workspace = true }
black_ui.workspace = true
black_logging.workspace = true
