[package]
name = "right_utility_panel"
version = "0.0.0"
edition = "2021"
authors.workspace = true
publish.workspace = true
license.workspace = true
description = "Data model and secure-storage-backed vault for the fixed right utility panel (Passwords and Bookmarks)."

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
