[package]
name = "settings"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
concat-idents.workspace = true
inventory = "0.3"
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings_value = { workspace = true, features = ["derive"] }
black_features.workspace = true
black_ui = { workspace = true, features = ["settings_value"] }
black_ui_extras = { workspace = true, features = ["default"] }

[dev-dependencies]
tempfile.workspace = true
black_features = { workspace = true, features = ["test-util"] }
black_ui_extras = { workspace = true, features = ["user_preferences-toml"] }

[features]
integration_tests = []
