[package]
name = "syntax_tree"
version = "0.1.0"
edition = "2021"
authors = ["Warp Team <dev@warp.dev>"]
publish.workspace = true
license.workspace = true

[dependencies]
rangemap.workspace = true
arborium.workspace = true
black_ui.workspace = true
black_editor.workspace = true
languages.workspace = true
futures.workspace = true
futures-lite.workspace = true
parking_lot.workspace = true
log.workspace = true
string-offset.workspace = true
streaming-iterator = "0.1.9"
black_util.workspace = true

[dev-dependencies]
black_editor = { workspace = true, features = ["test-util"] }
black_ui = { workspace = true, features = ["test-util"] }
