[package]
name = "warp_channel_config"
edition = "2024"
description = "Loads per-channel ChannelConfig for Warp's channel binaries"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
command.workspace = true
serde_json.workspace = true
warp_core.workspace = true
