[package]
name = "warp_js"
authors = ["Warp Team <dev@warp.dev>"]
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
cfg-if.workspace = true
rquickjs.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[features]
test-util = []
