[package]
name = "warp_ripgrep"
authors = ["Warp Team <dev@warp.dev>"]
version = "0.1.0"
edition = "2021"
description = "Thin wrapper around ripgrep for usage by Warp CLI"
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-process.workspace = true
command.workspace = true
futures.workspace = true
grep = "0.4.1"
ignore = "0.4.20"
instant.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
string-offset.workspace = true
warp_cli.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true
